// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dom helpers element should create element with class 1`] = `
<span
  class="demo"
/>
`;

exports[`dom helpers element should create element with content 1`] = `
<span>
  demo
</span>
`;

exports[`dom helpers element should create element with content and class 1`] = `
<span
  class="demo"
>
  demo
</span>
`;
